# gotihub-proposal

./: README.md  main.py  proposal.html  proposal.json  pyproject.toml
css/: proposal.css
data/: proposal.json
output/: proposal.html
proposal/: generator.py  models.py  pdf.py  renderer.py
templates/: commercial.html  company.html  cover.html  employee.html  letter.html  proposal.html  requirement.html  support.html  technology.html  thankyou.html  timeline.html  website.html  workflow.html
