[project]
name = "gotihub-proposal"
version = "0.1.0"
description = "Professional proposal generation engine for GOTIHUB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pillow>=12.3.0",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]
